--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -171,6 +171,8 @@ vergleichen:
    \label{eq:expVersch}
 \end{equation}
 
+DISKUSSION DIESES UNTERSCHIEDS!
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Temperaturabhängigkeit der Intensitäten}
@@ -187,7 +189,8 @@ Photonenflusses führt.
 \begin{figure}[t]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
-  \caption{\label{fig:EgapT} Temperaturabhängigkeit der Bandlückenenergie}
+  \caption{\label{fig:EgapT} Bandlückenenergie in Abhängigkeit der Temperatur, Fitparameter
+  aus Varshniformel: $E_g^0= 2.03 \text{ eV}$, $ \alpha = 4.3*10^{-4} \text{ eV/K}$, \quad $ \beta = 140.2 \text{ K}$}
 \end{figure}
 
 \begin{figure}[b]
@@ -199,13 +202,13 @@ Photonenflusses führt.
 
 Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
 
-\begin{figure}[h!]
+\begin{figure}[h]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/integrintenstempfit.eps}
   \caption{\label{fig:intInt}Integrierte Intensitäten der Lumineszenzpeaks bei $T=80\text{ K}$ bis $T=250\text{ K}$ (vlnr)}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[h]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/maxintenstempfit.eps}
   \caption{\label{fig:maxInt}Maximale Intensität der Lumineszenzpeaks bei $T=80\text{ K}$ bis $T=250\text{ K}$ (vlnr)}
