--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -185,6 +185,15 @@ rekombinieren und somit für eine Verminderung der Anzahl der abgestrahlten Phot
 Außerdem können aufgrund von Elektron-Phonon-Wechselwirkungen (insb. bei hohen Temperaturen) mehr Ladungsträger durch
 Schwingungsrelaxation, also nicht-strahlend, ins Valenzband rekombinieren, was ebenfalls zu einer Reduktion des
 Photonenflusses führt.
+Mit Hilfe der Arrheniusgleichung lassen sich die Intensitäten fitten und somit auf
+die Aktivierungsenergie rückschließen:
+
+  \begin{equation}
+    I(T) = \frac{I_0}{1+c*exp\left( -\frac{E_A}{k_B T} \right)}
+  \end{equation}
+
+ In Abb. \ref{fig:intInt} ist dieser Fit dargestellt.
+Wir erhalten eine Aktivierungsenergie von $E_A=33 \text{ meV}$
 
 \begin{figure}[t]
   \centering
@@ -205,7 +214,9 @@ Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} 
 \begin{figure}[h]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/integrintenstempfit.eps}
-  \caption{\label{fig:intInt}Integrierte Intensitäten der Lumineszenzpeaks bei $T=80\text{ K}$ bis $T=250\text{ K}$ (vlnr)}
+  \caption{\label{fig:intInt}Integrierte Intensitäten der Lumineszenzpeaks in Abhängigkeit
+  der Temperatur,
+  Fitparameter aus Arrheniusgleichung: $I_0=450074$,$c=25.2$,$E_A=33.4\text{ meV}$}
 \end{figure}
 
 \begin{figure}[h]
@@ -217,88 +228,6 @@ Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Schlussfolgerung}
 
-Schlussoflgerung, sollten wir mal was von nem Buch oder so entnehmen nutzen wir:
-
-
-\begin{quote}
-  Ein Zitat mit Referenz auf das Buch \cite{melissinos1966}
-\end{quote}
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id facilisis ligula,
-a ultrices nibh. Nullam suscipit tellus nec mauris fermentum, ornare luctus neque
-tincidunt. Aenean commodo tincidunt varius. Phasellus faucibus metus non erat
-consectetur bibendum. Duis et luctus risus, at egestas justo. Nunc eleifend lacus
-ac laoreet scelerisque. Aenean cursus dignissim magna in ultrices. In eget nisl
-quis nisi.
-
-Hier mal noch Beispiele wie man Gleichungen richtig referenziert, siehe
-Gleichung.~\ref{eq:first-equation} :
-\begin{equation}
-   \chi_+(p)\alt{\bf [}2|{\bf p}|(|{\bf p}|+p_z){\bf ]}^{-1/2}
-   \left(
-   \begin{array}{c}
-      |{\bf p}|+p_z\\
-      px+ip_y
-   \end{array}\right)
-   \label{eq:first-equation}
-\end{equation}
-
-
-Oder auch in der Zeile: $\vec{\psi_1} = |\psi_1\rangle \equiv c_0|0\rangle +
-c_1|1\rangle \chi^2 \approx
-\prod\sum\left[\frac{y_i-f(x_i)}{\sigma_i}\right]^2 |\psi_1\rangle
-\sim \lim_{\mu \rightarrow \infty}p(x;\mu) \geq \frac{1}{\sqrt{2 \pi
-\mu}} e^{-(x-\mu)^2 / 2\mu}P(x) \ll \int_{-\infty}^x p(x')dx'a
-\times b \pm c \Rightarrow \nabla \hbar$.
-
-Manchmal auch über mehr als eine Zeile, siehe Equation~\ref{eq:multilineeq}:
-\begin{eqnarray}
-  \sum \vert M^{\text{viol}}_g \vert ^2
-   &=&  g^{2n-4}_S(Q^2)~N^{n-2} (N^2-1)
-\nonumber
-\\
-   &&   \times \left( \sum_{i<j}\right) \sum_{\text{perm}}
-            \frac{1}{S_{12}}  \frac{1}{S_{12}} \sum_\tau c^f_\tau
-\,.
-\label{eq:multilineeq}
-\end{eqnarray}
-
-Natürlich gibts auch die guten alten subequations wie (\ref{subeq:1}) und
-(\ref{subeq:2}):
-\begin{subequations}
-\label{eq:whole}
-\begin{equation}
-  \left\{
-      abc123456abcdef\alpha\beta\gamma\delta1234556\alpha\beta
-       \frac{1\sum^{a}_{b}}{A^2}
-  \right\}
-%
-\,\label{subeq:1}
-\end{equation}
-\begin{eqnarray}
-  {\cal M} &=& ig_Z^2(4E_1E_2)^{1/2}(l_i^2)^{-1}
-                (g_{\sigma_2}^e)^2\chi_{-\sigma_2}(p_2)
-\nonumber\\
-  &&\times [\epsilon_i]_{\sigma_1}\chi_{\sigma_1}(p_1).\label{subeq:2}
-\end{eqnarray}
-\end{subequations}
-
-Tabelle \ref{tab:table1}:
-\begin{table}[h]
-\caption{\label{tab:table1}Eine Tabelle mit Fußnoten}
-\begin{ruledtabular}
-\begin{tabular}{cccccccc}
- &$r_c$ (\AA)&$r_0$ (\AA)&$\kappa r_0$&
- &$r_c$ (\AA) &$r_0$ (\AA)&$\kappa r_0$\\
-\hline
-Cu& 0.800 & 14.10 & 2.550 &Sn\footnotemark[1] & 0.680 & 1.870 & 3.700 \\
-Ag& 0.990 & 15.90 & 2.710 &Pb\footnotemark[1] & 0.450 & 1.930 & 3.760 \\
-Tl& 0.480 & 18.90 & 3.550 & & & & \\
-\end{tabular}
-\end{ruledtabular}
-\footnotetext[1]{Entnommen aus Ref.~\cite{bevington2003}.}
-\end{table}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliography{sample-paper}
@@ -309,7 +238,7 @@ Tl& 0.480 & 18.90 & 3.550 & & & & \\
 \bibitem{vorbereitung}FET Group, Fragen zur Vorbereitung, S.1-3, Humboldt-Universität zu Berlin
 \bibitem{kittel}Ch. Kittel, Einführung in die Festkörperphysik, S.159f., 12. Auflage, Oldenbourg Verlag [1999]
 \bibitem{phonons}C. Besikci and M. Razeghi, Electron Transport Properties of Ga$_{0.51}$In$_{0.49}$P for Device Applications, IEEE Trans.Electron Devices, vol. 41, no. 6, pp. 1066-1069 [1994]
-Woo Sik Yooa, Kitaek Kanga, Gota Muraib and Masahiro Yoshimotob, Temperature Dependence of Photoluminescence Spectra from Crystalline Silicon, Kyoto Institute of Technology [2015]
+\bibitem{max}Woo Sik Yooa, Kitaek Kanga, Gota Muraib and Masahiro Yoshimotob, Temperature Dependence of Photoluminescence Spectra from Crystalline Silicon, Kyoto Institute of Technology [2015]
 \end{thebibliography}
 
 
