--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -171,7 +171,10 @@ vergleichen:
    \label{eq:expVersch}
 \end{equation}
 
-DISKUSSION DIESES UNTERSCHIEDS!
+Zunächst deckt sich die Größenordnung und Richtung der Wellenlängenverschiebung mit der erwarteten aus \ref{eq:evVersch}.
+Die gemessene Änderung der Bandlücke - wie auch die Wellenlängenänderung - ist jedoch etwas größer ausgefallen als die Theorie vorhersagt.
+Diese Diskrepanz könnte sowohl von Verunreinigungen des Kristalls als auch von einer abweichenden Materialzusammensetzung als oben angenommen
+herrühren.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -238,6 +241,7 @@ Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} 
 \bibitem{vorbereitung}FET Group, Fragen zur Vorbereitung, S.1-3, Humboldt-Universität zu Berlin
 \bibitem{kittel}Ch. Kittel, Einführung in die Festkörperphysik, S.159f., 12. Auflage, Oldenbourg Verlag [1999]
 \bibitem{phonons}C. Besikci and M. Razeghi, Electron Transport Properties of Ga$_{0.51}$In$_{0.49}$P for Device Applications, IEEE Trans.Electron Devices, vol. 41, no. 6, pp. 1066-1069 [1994]
+\bibitem{dielek}S. Adachi, Material Parameters of In$_{1-x}$Ga$_x$As$_y$P$_{1-y}$ and Related Binaries, J.Appl.Phys., vol. 53, no. 12, pp. 8775-8792 [1982]
 \bibitem{max}Woo Sik Yooa, Kitaek Kanga, Gota Muraib and Masahiro Yoshimotob, Temperature Dependence of Photoluminescence Spectra from Crystalline Silicon, Kyoto Institute of Technology [2015]
 \end{thebibliography}
 
