--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -171,7 +171,7 @@ vergleichen:
    \label{eq:expVersch}
 \end{equation}
 
-Zunächst deckt sich die Größenordnung und Richtung der Wellenlängenverschiebung mit der erwarteten aus \ref{eq:evVersch}.
+\noindent Die Größenordnung und Richtung der Wellenlängenverschiebung deckt sich mit der Erwartung aus \ref{eq:evVersch}.
 Die gemessene Änderung der Bandlücke - wie auch die Wellenlängenänderung - ist jedoch etwas größer ausgefallen als die Theorie vorhersagt.
 Diese Diskrepanz könnte sowohl von Verunreinigungen des Kristalls als auch von einer abweichenden Materialzusammensetzung als oben angenommen
 herrühren.
