--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -171,7 +171,7 @@ vergleichen:
    \label{eq:expVersch}
 \end{equation}
 
-\noindent Die Größenordnung und Richtung der Wellenlängenverschiebung deckt sich mit der Erwartung aus \ref{eq:evVersch}.
+\noindent Die Größenordnung und Richtung der Wellenlängenverschiebung deckt sich mit der Erwartung aus (\ref{eq:evVersch}).
 Die gemessene Änderung der Bandlücke - wie auch die Wellenlängenänderung - ist jedoch etwas größer ausgefallen als die Theorie vorhersagt.
 Diese Diskrepanz könnte sowohl von Verunreinigungen des Kristalls als auch von einer abweichenden Materialzusammensetzung als oben angenommen
 herrühren.
@@ -188,14 +188,15 @@ rekombinieren und somit für eine Verminderung der Anzahl der abgestrahlten Phot
 Außerdem können aufgrund von Elektron-Phonon-Wechselwirkungen (insb. bei hohen Temperaturen) mehr Ladungsträger durch
 Schwingungsrelaxation, also nicht-strahlend, ins Valenzband rekombinieren, was ebenfalls zu einer Reduktion des
 Photonenflusses führt.
-Mit Hilfe der Arrheniusgleichung lassen sich die Intensitäten fitten und somit auf
-die Aktivierungsenergie rückschließen:
+Mit Hilfe der Arrheniusgleichung lassen sich die Peakintensitäten fitten und somit Rückschlüsse auf
+die Aktivierungsenergie $E_a$ ziehen, die pro Teilchen aufgewendet werden muss, um eine Reaktion (strahlende Rekombination)
+hervorzurufen:
 
   \begin{equation}
-    I(T) = \frac{I_0}{1+c*exp\left( -\frac{E_A}{k_B T} \right)}
+    I(T) = \frac{I_0}{1+c\cdot\text{exp}\left( -\frac{E_A}{k_B T} \right)}
   \end{equation}
 
- In Abb. \ref{fig:intInt} ist dieser Fit dargestellt.
+\noindent In Abb. \ref{fig:intInt} ist dieser Fit dargestellt.
 Wir erhalten eine Aktivierungsenergie von $E_A=33 \text{ meV}$
 
 \begin{figure}[t]
