--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -135,7 +135,11 @@ und $T=300\text{ K}$ von:
 Deutlich zu erkennen ist die Abnahme der Lumineszenzintensität und die Peakverbreiterung bei steigenden Temperaturen.
 Oberhalb von ca. $165\text{ K}$ ist ein Verschmieren der linken Peakhälften hin zu kürzeren Wellenlängen zu erkennen.
 Deshalb und da bereits ab $T>100$ K ein asymmetrischer Verlauf der Kurven zu erkennen ist, wurden alle Lumineszenzpeaks
-einem Doppelgaußfit unterzogen (Mathematica).
+einem Doppelgaußfit unterzogen (Mathematica). Exzitonische Übergänge konnten nicht beobachtet werden. Dies lässt sich leicht
+einsehen, wenn man die mittlere kinetische Energie eines Teilchens mit $k_B T=7\text{ meV}$ bei $T=80$ K nähert und
+mit der exzitonischen Bindungsenergie (\ref{exitEbind}) vergleicht. Offensichtlich ist die Temperatur
+von 80 K zu hoch, um exzitonische Übergänge zu beobachten, da gerade genügend thermische Energie zur Verfügung steht
+um die exzitonische Bindungsenergie zu überwinden.
 
 Entscheidend für die Temperaturabhängigkeit der Lumineszenz ist die bei steigenden Temperaturen immer
 relevantere Elektron-Phonon-Wechselwirkung. Vernachlässigbar bei geringen Temperaturen sorgen diese Wechselwirkungen
@@ -161,7 +165,16 @@ zu einer Verkleinerung der Bandlücke, die gemäß der Varshni-Formel abgeschät
 \noindent In den Abbildungen \ref{fig:EgapT} \& \ref{fig:lamT} sind die Temperatur-
 abhängigkeiten der Bandlückenenergie und der entsprechenden Wellenlänge dargestellt. Bei steigenden Temperaturen wurde eine deutliche
 Rotverschiebung des Intensitätsmaximums gemessen (Verkleinerung der Bandlücke). Die Rotverschiebung konnte auch durch
-direkte Beobachtung festgestellt werden. Grund hierfür ist neben der thermischen Ausdehnung des Kristallgitters (Verringerung
+direkte Beobachtung festgestellt werden.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
+  \caption{\label{fig:EgapT} Bandlückenenergie in Abhängigkeit der Temperatur, Fitparameter
+  aus Varshniformel: $E_g^0= 2.03 \text{ eV}$, $ \alpha = 4.3*10^{-4} \text{ eV/K}$, \quad $ \beta = 140.2 \text{ K}$}
+\end{figure}
+
+\noindent Grund hierfür ist neben der thermischen Ausdehnung des Kristallgitters (Verringerung
 der Bindungsenergie der Gitterelektronen/-löcher) die Veränderung des effektiven Kristallpotentials durch bei höheren Temperaturen
 zunehmende Elektron-Phonon-Streuung \cite{kittel}. Führt man eine Extrapolation der experimentellen Daten (Bandlücke/Wellenlänge zwischen 80
 und 255 K) durch und betrachtet die erwarteten Verschiebungen im Bereich zwischen 80 K und 300 K, lassen sich die Ergebnisse mit (\ref{eq:evVersch})
@@ -174,12 +187,29 @@ vergleichen:
 \noindent Die Größenordnung und Richtung der Wellenlängenverschiebung deckt sich mit der Erwartung aus (\ref{eq:evVersch}).
 Die gemessene Änderung der Bandlücke - wie auch die Wellenlängenänderung - ist jedoch etwas größer ausgefallen als die Theorie vorhersagt.
 Diese Diskrepanz könnte sowohl von Verunreinigungen des Kristalls als auch von einer abweichenden Materialzusammensetzung als oben angenommen
-herrühren.
+herrühren. Die konkrete Abweichung der exp. Bandlücke von der theoretischen gibt Aufschluss über die Mengenverhältnisse von Ga und In in der Diode.
+Die Materialzusammensetzung war vermutlich nicht genau an GaAs gitterangepasst, da die erhaltene
+Bandlücke experimentell größer ausgefallen ist als theoretisch vorhergesagt (s. Abb. \ref{EgapT}). Neben Verunreinigungen des Materials könnte
+die Ursache hierfür ein höherer Gehalt an Ga (GaP) sein (d.h $x>0.51$), da dies gemäß \ref{eq:Ex} zu einer größeren Bandlücke führt.
+Extrapoliert man die experimentell ermittelte Bandlücke für $T=300\text{ K}$ mithilfe der Varshni-Formel, lässt sich mit Gl. \ref{eq:Ex}
+ein korrigierter Wert für die Zusammensetzung errechnen. Wir erhalten $x_{korr}\approx 0.55$.
 
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/peaktemp.eps}
+  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lumineszenz-Wellenlänge von InGaP}
+\end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Temperaturabhängigkeit der Intensitäten}
 
+\begin{figure}[b]
+  \centering
+  \includegraphics[width=0.48\textwidth]{../Messung/integrintenstempfit.eps}
+  \caption{\label{fig:intInt}Integrierte Intensitäten der Lumineszenzpeaks in Abhängigkeit
+  der Temperatur,
+  Fitparameter aus Arrheniusgleichung: $I_0=450074$,$c=25.2$,$E_A=33.4\text{ meV}$}
+\end{figure}
 
 \noindent Die Abnahme der Lumineszenzintensität bei steigenden Temperaturen lässt sich mit der Fermi-Dirac-Verteilung
 verstehen: bei steigenden Temperaturen werden zunehmend auch Zustände oberhalb der Fermi-Energie, also Zustände
@@ -188,42 +218,25 @@ rekombinieren und somit für eine Verminderung der Anzahl der abgestrahlten Phot
 Außerdem können aufgrund von Elektron-Phonon-Wechselwirkungen (insb. bei hohen Temperaturen) mehr Ladungsträger durch
 Schwingungsrelaxation, also nicht-strahlend, ins Valenzband rekombinieren, was ebenfalls zu einer Reduktion des
 Photonenflusses führt.
-Mit Hilfe der Arrheniusgleichung lassen sich die Peakintensitäten fitten und somit Rückschlüsse auf
-die Aktivierungsenergie $E_a$ ziehen, die pro Teilchen aufgewendet werden muss, um eine Reaktion (strahlende Rekombination)
-hervorzurufen:
+
+Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt. Erkennbar ist
+die Abnahme der Peak-Flächen bei steigenden Temperaturen. Mit Hilfe der Arrheniusgleichung lassen sich die integrierten
+Peakintensitäten in Abhängigkeit von der Temperatur fitten und somit Rückschlüsse auf die Aktivierungsenergie $E_A$ ziehen.
 
   \begin{equation}
     I(T) = \frac{I_0}{1+c\cdot\text{exp}\left( -\frac{E_A}{k_B T} \right)}
   \end{equation}
 
-\noindent In Abb. \ref{fig:intInt} ist dieser Fit dargestellt.
-Wir erhalten eine Aktivierungsenergie von $E_A=33 \text{ meV}$
+\noindent Diese trifft eine Aussage über die notwendige Energie eines Elektrons,
+um über Phononen oder andere nicht-strahlende Prozesse zu relaxieren. In Abb. \ref{fig:intInt}
+ist dieser Fit dargestellt. Wir erhalten eine Aktivierungsenergie von $E_A=33 \text{ meV}$. Diese liegt im erwarteten
+Referenzbereich von $E_A=10-50\text{ meV}$ (für In$_{0,48}$Ga$_{0.52}$P) \cite{eact}.
+
+In Abb. \ref{fig:maxInt} sind die maximalen Intensitäten über die Temperatur aufgetragen. Deutlich ist wieder
+der (stärker als lineare) Abfall der Lumineszenz-Intensität bei steigenden Temperaturen. Wie bereits in Abschnitt III.2 erläutert,
+sind vor allem Elektron-Phonon-Wechselwirkung für dieses Verhalten verantwortlich.
 
 \begin{figure}[t]
-  \centering
-  \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
-  \caption{\label{fig:EgapT} Bandlückenenergie in Abhängigkeit der Temperatur, Fitparameter
-  aus Varshniformel: $E_g^0= 2.03 \text{ eV}$, $ \alpha = 4.3*10^{-4} \text{ eV/K}$, \quad $ \beta = 140.2 \text{ K}$}
-\end{figure}
-
-\begin{figure}[b]
-  \centering
-  \includegraphics[width=0.48\textwidth]{../Messung/peaktemp.eps}
-  \caption{\label{fig:lamT} Temperaturabhängigkeit der Lumineszenz-Wellenlänge von InGaP}
-\end{figure}
-
-
-Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} dargestellt.
-
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.48\textwidth]{../Messung/integrintenstempfit.eps}
-  \caption{\label{fig:intInt}Integrierte Intensitäten der Lumineszenzpeaks in Abhängigkeit
-  der Temperatur,
-  Fitparameter aus Arrheniusgleichung: $I_0=450074$,$c=25.2$,$E_A=33.4\text{ meV}$}
-\end{figure}
-
-\begin{figure}[h]
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/maxintenstempfit.eps}
   \caption{\label{fig:maxInt}Maximale Intensität der Lumineszenzpeaks bei $T=80\text{ K}$ bis $T=250\text{ K}$ (vlnr)}
@@ -232,6 +245,12 @@ Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Schlussfolgerung}
 
+Es wurde das Lumineszenzspektrum einer InGaP/GaAs-Photodiode untersucht. Die charakteristische Temperaturabhängigkeit der
+Bandlücke, sowie der Peakintensitäten und integrierten Peakintensitäten konnte bestätigt werden. Mittels Vergleich des theoretischen
+und experimentellen Temperaturverhaltens der Bandlücke wurde eine Aussage über die Zusammensetzung des Ga$_x$In$_(1-x)$P getroffen
+($x\approx 0.55$ wahrscheinlich). Die auf die Lumineszenz bezogene ermittelte Aktivierungsenergie von InGaP liegt im erwarteten Bereich.
+Eine Fehlerquelle, die zu einer systematischen Abweichung der Bandlücke nach oben führen würde, ist die Reinheit des Kristalls. Bereits
+geringste Verunreinigungen des Materials nehmen großen Einfluss auf die Phononen-Wechselwirkung, die v.a. an ebensolchen Defekten streuuen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliography{sample-paper}
@@ -244,23 +263,13 @@ Die integrierten Intensitäten der Spektrallinien sind in Abb. \ref{fig:intInt} 
 \bibitem{phonons}C. Besikci and M. Razeghi, Electron Transport Properties of Ga$_{0.51}$In$_{0.49}$P for Device Applications, IEEE Trans.Electron Devices, vol. 41, no. 6, pp. 1066-1069 [1994]
 \bibitem{dielek}S. Adachi, Material Parameters of In$_{1-x}$Ga$_x$As$_y$P$_{1-y}$ and Related Binaries, J.Appl.Phys., vol. 53, no. 12, pp. 8775-8792 [1982]
 \bibitem{max}Woo Sik Yooa, Kitaek Kanga, Gota Muraib and Masahiro Yoshimotob, Temperature Dependence of Photoluminescence Spectra from Crystalline Silicon, Kyoto Institute of Technology [2015]
+\bibitem{eact}J. D. Lambkin, L. Considine, and S. Walsh, Temperature dependence of the photoluminescence intensity of ordered and disordered In$_{0,48}$Ga$_{0.52}$P, Appl. Phys. Lett. 65, 73 [1994]
 \end{thebibliography}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
 \appendix
-
-\section{Sonstiges}
-Hier sehen wir einen Beispiel Anhang und so könnte man Code in Latex einbinden:
-\begin{verbatim}
-> mkdir ~/8.13
-> mkdir ~/8.13/papers
-> mkdir ~/8.13/papers/template
-> cd ~/8.13/papers/template
-\end{verbatim}
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
